# img2physiprop

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  data.json  environment.yml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: main_documentation.yml  main_pipeline.yml  pull_request_pipeline.yml
Test_png/: save_smoothin.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_190fb31f9d2d9f08_discretization_visualization_py.html  z_190fb31f9d2d9f08_image_visualization_py.html  z_190fb31f9d2d9f08_visualization_py.html  z_579aa5df3a08a8b4_interpolator_all_voxel_py.html  z_579aa5df3a08a8b4_interpolator_center_py.html  z_579aa5df3a08a8b4_interpolator_nodes_py.html  z_579aa5df3a08a8b4_interpolator_py.html  z_6c61ece2dfd2710b_export_data_py.html  z_6c61ece2dfd2710b_import_discretization_py.html  z_6c61ece2dfd2710b_import_image_py.html  z_6c61ece2dfd2710b_interpolate_element_data_py.html  z_6c61ece2dfd2710b_run_py.html  z_6c61ece2dfd2710b_utilities_py.html  z_6c61ece2dfd2710b_visualize_results_py.html  z_822a1055110c5bad_main_py.html  z_9993f1ce2f4722b4_dicom_reader_py.html  z_9993f1ce2f4722b4_image_reader_py.html  z_9993f1ce2f4722b4_png_reader_py.html  z_c78e3c9d40b6f788_dat_reader_py.html  z_c78e3c9d40b6f788_discretization_reader_py.html  z_c78e3c9d40b6f788_mesh_reader_py.html
src/i2pp/: main.py  main_example_config.yaml
src/i2pp/core/: Image_Data_Converter.py  (+18 more)
src/pyskel/: main.py  main_example_config.yaml
tests/i2pp/: test_main.py
tests/pyskel/: test_main.py
user_functions/: user_function.py
(+49 files in other folders)
