## Overall setup

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "img2physiprop"
version = "1.0"
authors = [{ name = "Laura Engelhardt" },{ name = "Maximilian Ludwig" }, { name = "Theodor Bayer" }]
maintainers = [{ name = "Laura Engelhardt" },{ name = "Maximilian Ludwig" }]
description = "Python tool to set physical properties in 4C according to medical image date."
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["Skeleton", "Documentation", "CICD", "Testing", "Pre-Commit"]
classifiers = ["Programming Language :: Python :: 3.12"]

requires-python = "==3.12.*"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["i2pp"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
i2pp = "i2pp.main:main"

## Tools

[tool.bandit]
exclude_dirs = [
    ".git",
    "__pycache__",
]

[tool.black]
line-length = 79

[tool.coverage.run]
relative_files = true

[tool.isort]
profile = "black"
line_length = 79
filter_files = true
src_paths = ["src/i2pp/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p pytest_cov --cov-report=term --cov-report=html --cov-fail-under=90 --cov=src/i2pp/ --cov-append"
